<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="3dp"
        android:layout_marginStart="8dp"
        android:elevation="10dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="5dp">

        <RelativeLayout
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:id="@+id/barcodeImgview"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                android:src="@drawable/barcode_image" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:paddingRight="-3dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/deleteImgBarcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:padding="5dp"
                    android:src="@drawable/ic_delete" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_toRightOf="@+id/barcodeImgview"
                android:paddingLeft="5dp"
                >

                <EditText
                    android:id="@+id/productNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/productDate"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    android:scrollbars="horizontal"
                    android:singleLine="true"
                    android:textSize="10dp"
                    android:text="@string/productTxt"
                    android:textAlignment="gravity" />

                <TextView
                    android:id="@+id/productDate"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:gravity="right|center"
                    android:textSize="10dp"
                    android:text="@string/productDateTxt"
                    android:textAlignment="gravity" />

                <TextView
                    android:id="@+id/productManualBarcodext"
                    android:layout_width="wrap_content"
                    android:layout_height="53dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/productNameTxt"
                    android:layout_toLeftOf="@+id/productDate"
                    android:gravity="left|center"
                    android:lines="2"
                    android:paddingBottom="5dp"
                    android:paddingRight="5dp"
                    android:scrollbars="horizontal"
                    android:text="@string/ProdcutBarcodeTxt"
                    android:textAlignment="gravity"
                    android:textSize="10dp" />

                <EditText
                    android:id="@+id/productquantityTxt"
                    android:layout_width="wrap_content"
                    android:paddingRight="12dp"
                    android:paddingLeft="10dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/productNameTxt"
                    android:gravity="right|center"
                    android:paddingBottom="5dp"
                    android:background="@android:color/transparent"
                    android:text="@string/productQuantityTxt"
                    android:textSize="10dp"
                    android:textAlignment="gravity" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>